# OpenToons

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
desktopApp/: build.gradle.kts
docs/: architecture.md  overview.md  poc-report.md  poc01-report.md  poc02-report.md  poc03-report.md  poc04-report.md  poc05-report.md  poc06-report.md  roadmap.md
docs/decisions/: 0001-network-model.md  0002-three-planes.md  0003-content-model.md  0004-deletion-semantics.md  0005-mobile-client.md  0006-nat-and-reachability.md  0007-resilient-bootstrap.md  0008-identity-trust.md  0009-scoring-and-donations.md  README.md
docs/pocs/: poc01-report.md  poc02-report.md  poc03-report.md  poc04-report.md  poc07-report.md
gradle/: libs.versions.toml
iosApp/: README.md  project.yml
iosApp/iosApp/: ContentView.swift  Info.plist
openspec/changes/add-work-manifest/: design.md  proposal.md  tasks.md
openspec/changes/edit-import-metadata/: design.md  proposal.md  tasks.md
openspec/changes/expand-format-compatibility/: design.md  proposal.md  tasks.md
openspec/changes/improve-import/: design.md  tasks.md
openspec/changes/offline-reader/: design.md  proposal.md  tasks.md
openspec/changes/poc-01/: design.md  proposal.md  tasks.md
openspec/changes/poc-02/: design.md  proposal.md  tasks.md
openspec/changes/poc-03/: design.md  proposal.md  tasks.md
openspec/changes/poc-04/: proposal.md  tasks.md
openspec/changes/poc-05/: design.md  proposal.md  tasks.md
openspec/changes/poc-06/: design.md  proposal.md  tasks.md
openspec/changes/poc-07/: tasks.md
openspec/changes/polish-ui-details/: design.md  tasks.md
openspec/changes/robust-longstrip-reader/: design.md  proposal.md  tasks.md
openspec/specs/content-import/: spec.md
openspec/specs/ios-native-campaign/: spec.md
openspec/specs/kmp-p2p-spi/: spec.md
openspec/specs/longstrip-rendering/: spec.md
openspec/specs/offline-library/: spec.md
openspec/specs/poc07-report/: spec.md
poc01/: README.md
poc01/android/: build.gradle.kts
poc01/node/: build.gradle.kts
poc02/android/: build.gradle.kts
poc03/: .gitignore  README.md
poc03/android/: build.gradle.kts
poc03/android-go/: build.gradle.kts
poc03/go-facade/: go.sum  tools.go
poc03/go-interop/: go.mod  go.sum
poc03/net/: build.gradle.kts
poc03/rust-facade/: Cargo.toml  build.rs
poc04/android/: build.gradle.kts  proguard-rules.pro
poc04/libp2p/: build.gradle.kts
poc04/node/: build.gradle.kts
poc04/rust-facade/: Cargo.toml
poc04/rust-facade/src/: lib.rs
poc04/scripts/: rig-public.sh  s1-mesh.sh
poc04/trama/: build.gradle.kts
poc05/android/: build.gradle.kts
poc05/api/: build.gradle.kts
poc05/libp2p/: build.gradle.kts
poc05/node/: build.gradle.kts
poc05/rig/: audit-listen.sh  audit-pcap.sh  kill-circuits.sh
poc05/trama/: build.gradle.kts
poc06/android/: build.gradle.kts  proguard-rules.pro
poc06/node/: build.gradle.kts
poc06/rig/: audit-noleak.sh  build-i2pd-android.sh  i2pd-android.conf  i2pd-warmup.conf  tunnels-dev.conf  warmup.sh
poc06/trama/: build.gradle.kts
pocs/poc01/: README.md
pocs/poc03/: .gitignore  README.md
pocs/poc04/: .gitignore
pocs/poc05/: .gitignore
pocs/poc07/: DATA.md
pocs/poc07/cffi-facade/: Cargo.toml  poc07cffi-sim.def  poc07cffi.def  poc07cffi.h
pocs/poc07/cffi-facade/src/: lib.rs
pocs/poc07/libp2p-facade/: .gitignore  Cargo.toml  poc07lp-device.def  poc07lp-sim.def  poc07lp.h
pocs/poc07/libp2p-facade/src/: lib.rs
shared/: build.gradle.kts
(+390 files in other folders)
